[gd_scene load_steps=25 format=3 uid="uid://clwmogsmo21wg"]

[ext_resource type="Script" path="res://Frog.gd" id="1_6to0g"]
[ext_resource type="Texture2D" uid="uid://b7waeknr0wotp" path="res://Sunny-land-files/Graphical Assets/sprites/frog/idle/frog-idle-1.png" id="1_8fi5r"]
[ext_resource type="Texture2D" uid="uid://bnwe8y5yidx1o" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-1.png" id="2_jgv5i"]
[ext_resource type="Texture2D" uid="uid://dnye1pjriux53" path="res://Sunny-land-files/Graphical Assets/sprites/frog/idle/frog-idle-2.png" id="2_pgg2k"]
[ext_resource type="Texture2D" uid="uid://myynqhqwaro3" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-2.png" id="3_eg5u8"]
[ext_resource type="Texture2D" uid="uid://cujv8g33ghmaq" path="res://Sunny-land-files/Graphical Assets/sprites/frog/idle/frog-idle-3.png" id="3_t51rr"]
[ext_resource type="Texture2D" uid="uid://b0fh6ihu7v3f2" path="res://Sunny-land-files/Graphical Assets/sprites/frog/idle/frog-idle-4.png" id="4_iebyj"]
[ext_resource type="Texture2D" uid="uid://cet33x58xhawt" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-3.png" id="4_ttton"]
[ext_resource type="Texture2D" uid="uid://cbi3jh7tqj7so" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-4.png" id="5_gfks5"]
[ext_resource type="Texture2D" uid="uid://bq81amsx3vv3t" path="res://Sunny-land-files/Graphical Assets/sprites/frog/jump/frog-jump-1.png" id="5_tryx6"]
[ext_resource type="Texture2D" uid="uid://b130xmamjoxgo" path="res://Sunny-land-files/Graphical Assets/sprites/frog/jump/frog-jump-2.png" id="6_5jbpj"]
[ext_resource type="Texture2D" uid="uid://cmgl2u7elxs7n" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-5.png" id="6_h6epg"]
[ext_resource type="Texture2D" uid="uid://ron0cdgx6l1r" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-6.png" id="7_4jg5l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mraxy"]
size = Vector2(22, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_1r0do"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jgv5i")
}, {
"duration": 1.0,
"texture": ExtResource("3_eg5u8")
}, {
"duration": 1.0,
"texture": ExtResource("4_ttton")
}, {
"duration": 1.0,
"texture": ExtResource("5_gfks5")
}, {
"duration": 1.0,
"texture": ExtResource("6_h6epg")
}, {
"duration": 1.0,
"texture": ExtResource("7_4jg5l")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_8fi5r")
}, {
"duration": 1.0,
"texture": ExtResource("2_pgg2k")
}, {
"duration": 1.0,
"texture": ExtResource("3_t51rr")
}, {
"duration": 1.0,
"texture": ExtResource("4_iebyj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_tryx6")
}, {
"duration": 1.0,
"texture": ExtResource("6_5jbpj")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_fb73i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_1r0do")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rmebn"]
resource_name = "death"
length = 0.54
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_n7bvq"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_7qlxn"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_1r0do")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_nx2f6"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ns4v3"]
_data = {
"RESET": SubResource("Animation_fb73i"),
"death": SubResource("Animation_rmebn"),
"fall": SubResource("Animation_n7bvq"),
"idle": SubResource("Animation_7qlxn"),
"jump": SubResource("Animation_nx2f6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_c34nm"]
radius = 84.006

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xglyk"]
size = Vector2(26, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tsem"]
size = Vector2(21, 4)

[node name="Frog" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource("1_6to0g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 7.5)
shape = SubResource("RectangleShape2D_mraxy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 2)
sprite_frames = SubResource("SpriteFrames_1r0do")
animation = &"idle"

[node name="Frog-anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ns4v3")
}

[node name="Player-Detection" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player-Detection"]
position = Vector2(2, 5)
shape = SubResource("CircleShape2D_c34nm")

[node name="side_checker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
position = Vector2(2, 8.5)
shape = SubResource("RectangleShape2D_xglyk")

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2(2.5, -1)
shape = SubResource("RectangleShape2D_5tsem")

[node name="Chase" type="Timer" parent="."]
process_callback = 0
wait_time = 1.5

[node name="fst_jump" type="Timer" parent="."]
wait_time = 2.0

[node name="damage_player" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="Player-Detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Player-Detection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="timeout" from="Chase" to="." method="_on_chase_timeout"]
[connection signal="timeout" from="fst_jump" to="." method="_on_fst_jump_timeout"]
[connection signal="timeout" from="damage_player" to="." method="_on_damage_player_timeout"]
